# BezpieczenstwoDanych-25

./: .gitignore  README.md  prfrmnce.py  pyproject.toml  requirements.txt
BitwiseDualKeyAnonymizer/: anonymizer.py
DeterministicAnonymizer/: __init__.py  anonymizer.py  config.py
Shuffling/: anonymizer.py  current_anonymizer.py  people_data.json
