[project]
name = "bezpieczenstwodanych"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=33.3.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyinstaller>=6.11.1",
    "seaborn>=0.13.2",
]
